more iphone queries

--- a/_includes/themes/p97/default.html
+++ b/_includes/themes/p97/default.html
@@ -7,7 +7,8 @@
     <meta name="author" content="{{ site.author.name }}">
 
     <!-- Enable responsive viewport -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
@@ -71,7 +72,7 @@
     </div>  
     {{ content }}
 
-    <div class="container">
+    <div class="container brand-container">
       <div class="row">
         <div class="col-md-8">
           <h2>Technology solutions and engagement strategies for <span class="blue">marine</span> &amp; coastal planning.</h2>
