--- a/_includes/themes/p97/default.html
+++ b/_includes/themes/p97/default.html
@@ -36,12 +36,21 @@
   </head>
 
   <body>
-    <div class="container nav-container">
-      <div class="navbar">
-        <a class="brand" href="{{ HOME_PATH }}">
-          <img src="{{ ASSET_PATH }}/images/point_97_logo.svg" alt="point nine seven logo" />
-        </a>
-        <ul class="nav navbar-nav">
+    <div class="navbar navbar-default navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#"><img src="{{ ASSET_PATH }}/images/point_97_logo.svg" alt="point nine seven logo" /></a>
+        </div>
+        <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav">
+            </li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right">
           {% assign pages_list = site.pages %}
           {% assign group = 'navigation' %}
           {% include JB/pages_list %}
@@ -68,8 +77,11 @@
             <!-- <div class="weather-window">stuff</div> -->
           </li>
         </ul>
+        </div><!--/.nav-collapse -->
       </div>
-    </div>  
+    </div>
+
+    
     {{ content }}
 
     <div class="container brand-container">
