--- a/assets/themes/p97/css/style.css
+++ b/assets/themes/p97/css/style.css
@@ -42,22 +42,29 @@ h1,h2,h3,h4,h5,h6 {
 
 .navbar {
     margin-top: 20px;
-    z-index: 1000;
-    background-color: inherit !important;
-    position: absolute !important;
-    width: 85%;
+
+    
+}
+
+.navbar-default {
+    background-color: rgba(0, 0, 0, 0) !important;
+    border: 0px !important;
+}
+    
 }
 .navbar .brand {
     height: 170px;
 }
-.navbar .nav {
-    margin-top: 10px;
-    float: right;
+
+.navbar-default .navbar-toggle {
+    margin-top: 30px !important;
+    margin-right: 30px !important;
 }
-.navbar .navbar-nav a{
+
+.navbar .nav a{
     font-family: 'museo_sans_500regular' !important;
-	color: white;
-	font-size: 20px;
+	color: white !important;
+	/*font-size: 20px;*/
 	text-transform: uppercase;
 	font-weight: bold;
 	text-shadow: 0 1px 2px rgba(0,0,0,0.6);
@@ -66,14 +73,17 @@ h1,h2,h3,h4,h5,h6 {
     background-color: inherit !important;
     
 }
+
+.navbar-right {
+    margin-top: 20px !important;
+}
+
 .navbar .widget {
-    margin-top: 0px;
     width: 65px;
     color: white;
 }
 .navbar .widget .number {
     font-size: 18px;
-    margin-top: -5px;
 }
 
 .navbar .widget .climacon {
@@ -278,395 +288,3 @@ h1,h2,h3,h4,h5,h6 {
 .thumbnail img {
     min-height: 100px;
 }
-
-@media (max-width: 767px) {
-    .nav-container .navbar .nav li {
-        /*display: inline-block;    You can also add some margins here to make it look prettier 
-            zoom:1;
-            *display:inline; /* this fix is needed for IE7- */*/
-    }
-    .nav-container .navbar-nav {
-        width: 60% !important;
-    }
-}
-
-
-@media (min-width: 768px) { 
-    .navbar .navbar-nav {
-        margin-top: -5px;
-        width: 75%;
-    }
-    .navbar .navbar-nav li a {
-        padding: 5px 3px;
-        font-size: 16px;
-    }
-    .navbar .navbar-nav .widget a {
-        padding-top: 0;
-        /*margin-top: 15px;*/
-    }
-    .navbar .brand img {
-        height: 60px !important;
-    }
-    .root {
-        height: 700px;
-    }
-}
-
-
-@media (min-width: 1024px) { 
-    .navbar .navbar-nav li a {
-        padding: 5px 5px;
-        font-size: 18px;
-    }
-    .navbar .navbar-nav {
-        width: 70%;
-    }
-    .navbar .navbar-nav li a {
-        margin-top: 10px;
-        padding-top: 15px;
-        font-size: 18px;
-    }
-
-}
-@media (min-width: 1100px) { 
-    .navbar .navbar-nav {
-        width: 60%;
-    }
-}
-@media (min-width: 1200px) { 
-    .navbar .navbar-nav {
-        width: 64%;
-    }
-    .navbar .brand img {
-        height: 80px !important;
-    }
-    .container {
-        max-width: 1100px !important;
-    }
-    .navbar .navbar-nav a{
-        font-size: 24px !important;
-        margin-top: 20px !important;
-        padding-left: 10px;
-        padding-right: 10px;
-    }
-    .navbar .navbar-nav .widget {
-        padding-top: 8px !important;   
-    }
-}
-
-
-@media (min-width: 1300px) {
-    .container {
-        /*max-width: 1200px !important;*/
-    }
-    .navbar .navbar-nav {
-        width: 65%;
-    }
-    .navbar .brand img {
-        height: 100px !important;
-    }
-    
-    .navbar .navbar-nav a{
-        font-size: 26px !important;
-        margin-top: 30px !important;
-     
-    }
-    /*.navbar {
-        width: 72% !important;
-    }*/
-}
-
-@media (min-width: 1500px) {
-    .container {
-        max-width: 1400px !important;
-    }
-    
-    .navbar .navbar-nav {
-        width:60%;
-    }
-}
-
-/* ipad portrait */
-@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : portrait) {
-    .navbar {
-        /*width: 100%;*/
-        left: 50px;
-        top: 10px;
-    }
-    .navbar .brand img {
-        height: 100px;
-    }
-    .navbar .navbar-nav {
-        width: 60% !important;
-        margin-top: 0;
-    }
-    .navbar .navbar-nav a {
-        font-size: 20px !important;
-    }
-    .root {
-        
-    }
-    .root .carousel .carousel-caption {
-        right: 7%;
-        left: 7%;
-        height: 490px;
-        top:  23%;
-    }
-}
-/*  and (orientation:landscape)*/
-@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) and (orientation : landscape) {
-    .navbar {
-        width: 92%;
-    }
-  .navbar .navbar-nav {
-      width: 57% !important;
-      margin-top: 10px;
-  }
-  .root {
-      height: 570px !important;
-  }
-  .root .carousel .carousel-caption {
-      right: 7%;
-      left: 7%;
-      height: 425px;
-      top: 20%;
-  }
-}
-
-/*iPhone < 5:*/
-@media screen and (device-aspect-ratio: 2/3)  {
-    h2 {
-        font-size: 16px !important;
-        margin-top: 10px !important;
-    }
-    .nav-container {
-        padding-left: 5px !important;
-    }
-    .navbar {
-        margin-top: 5px;
-        width: 100%;
-    }
-    .nav-container .navbar .nav {
-        margin: 0px 0px;
-        width: 48% !important;
-    }
-    
-    .nav-container .navbar .nav li {
-        display: inline-block;   /* You can also add some margins here to make it look prettier */
-            zoom:1;
-            *display:inline; /* this fix is needed for IE7- */
-    }
-    .navbar .navbar-nav a {
-        font-size: 14px;
-        padding-top: 1px;
-        padding-bottom: 1px;
-        line-height: 1;
-        text-align: right;
-    }
-    .navbar .widget {
-        display: none !important;
-    }
-    .root {
-        height: 280px;
-    }
-    .root .carousel-inner {
-        
-        padding-top: 20%;
-    }
-    .root .carousel-inner .lens {
-        left: 5%;
-        right: 5%;
-        top: 40px;
-        height: 150px !important;
-
-    }
-    .root .carousel-inner .carousel-caption h1 {
-        font-size: 14px;
-    }
-    .root .carousel-inner .carousel-caption h2 {
-        font-size: 12px !important;
-    }
-    .root .carousel-inner .lens p, .root .carousel-inner .lens .btn {
-        display: none !important;
-    }
-    .carousel .lens .lens-panel {
-        width: 44%;
-        height: 100%;
-    }
-
-    .carousel .lens .lens-panel .lens-panel-contents {
-        padding: 5% 5%;
-    }
-    .carousel-control {
-        display: none;
-    }
-}
-
-/*@media screen and (device-aspect-ratio: 2/3) and (orientation : landscape) {
-    .navbar {
-        width: 99% !important;
-    }
-    .navbar .brand img {
-        height: 50px;
-    }
-   
-    .nav-container .navbar .nav {
-        width: 50% !important;
-    }
-    .navbar .navbar-nav a {
-        font-size: 10px;
-        padding-left: 5px;
-        padding-right: 5px;
-    }
-}*/
-
-/*iPhone 5:*/
-@media only screen and (device-width: 320px) and (-webkit-min-device-pixel-ratio: 2)  and (orientation: portrait){
-    .navbar {
-        width: 100% !important;
-        margin-top: 5px !important;
-        margin-left: 5px !important;
-    }
-     .navbar .brand img {
-        height: 40px;
-        margin-top: 4px;
-    }
-    .nav-container .navbar .nav {
-        margin-top: 0px;
-    }
-    .navbar-nav > li > a {
-        padding-top: 0px  !important;
-        padding-bottom: 0px  !important;
-        line-height: 10px  !important;
-    }
-    .nav-container .navbar-nav {
-        width: 70% !important;
-    }
-    .navbar .navbar-nav a {
-        font-size: 10px !important;
-        padding-left: 0px;
-        padding-right: 0px;
-    }
-    .nav-container .navbar .nav li {
-        display: inline-block;   /* You can also add some margins here to make it look prettier */
-            zoom:1;
-            *display:inline; /* this fix is needed for IE7- */
-    }
-    .navbar .widget  {
-        display: none !important;
-    }
-    .carousel .carousel-control {
-        display: none!important;
-    }
-    h1 {
-        font-size: 12px !important;
-    }
-    h2 {
-        font-size: 10px !important;
-    }
-
-    .brand-container h2 {
-        margin-top: 10px;
-        font-size: 16px;
-    }
-    .root .carousel-inner .lens {
-        left: 25px;
-        right: 25px;
-        top: 65px;
-        height: 310px !important;
-
-    }
-    .root .carousel-inner .lens { 
-
-    }
-    .carousel .lens .lens-panel {
-        width: 40%;
-    }
-    .carousel .lens .lens-panel .lens-panel-contents {
-    padding: 10px 5px;
-    }
-
-    .lens-panel-text p {
-        font-size: 10px;
-    }
-    .lens .btn {
-        display: none;
-    }
-    .root {
-        height: 400px;
-    }
-   
-}
-
-@media only screen and (device-width: 320px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: landscape) {
-    .navbar {
-        width: 100% !important;
-        margin-top: 5px !important;
-        margin-left: 5px !important;
-    }
-     .navbar .brand img {
-        height: 40px;
-    }
-    .nav-container .navbar .nav {
-            margin-top: 0px;
-        }
-    /*.nav-container .navbar .navbar-nav {
-        width: 100% !important;
-    }*/
-    .nav-container .navbar .nav li {
-        display: inline-block;   /* You can also add some margins here to make it look prettier */
-            zoom:1;
-            *display:inline; /* this fix is needed for IE7- */
-    }
-    .navbar .navbar-nav a {
-        font-size: 10px !important;
-        padding-left: 0px;
-        padding-right: 0px;
-    }
-    
-    .root .carousel-inner {
-        padding-top: 0px;
-    }
-    .root {
-        height: 175px;
-    }
-    .root .carousel-inner .lens {
-        left: 5%;
-        right: 5%;
-        top: 60px;
-        height: 100px !important;
-
-    }
-    .lens-panel-text p, .lens .btn {
-        display: none;
-    }
-    .navbar .widget  {
-        display: none !important;
-    }
-    .carousel .carousel-control {
-        display: none!important;
-    }
-    h1 {
-        font-size: 12px !important;
-    }
-    h2 {
-        font-size: 10px !important;
-    }
-    .brand-container h2 {
-        margin-top: 10px;
-        font-size: 16px;
-    }
-
-}
-/* samsung galaxy */
-@media screen and (device-width: 320px) and (device-height: 640px)
-
-}
-
-/* nexus 4 */
-@media screen and (device-width: 384px) and (device-height: 592px) and (-webkit-device-pixel-ratio: 2)  {
- .nav-container .navbar .nav {
-     width: 55% !important;
- }   
-}
-
