--- a/_includes/themes/p97/default.html
+++ b/_includes/themes/p97/default.html
@@ -44,16 +44,17 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"><img src="{{ ASSET_PATH }}/images/point_97_logo.svg" alt="point nine seven logo" /></a>
+          <a class="navbar-brand" href="{{ HOME_PATH }}"><img src="{{ ASSET_PATH }}/images/point_97_logo.svg" alt="point nine seven logo" /></a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
             </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-          {% assign pages_list = site.pages %}
+          {% comment %}{% assign pages_list = site.pages %}
           {% assign group = 'navigation' %}
-          {% include JB/pages_list %}
+          {% include JB/pages_list %}{% endcomment %}
+                  <li class="dropdown active"><a href="{{BASE_PATH}}/team">Team</i></a></li>
           <li class="widget faded fade-out hidden-phone">
             <a class="dropdown-toggle" data-toggle="dropdown"><table>
               <tr>
@@ -109,8 +110,8 @@
     <script src="{{ ASSET_PATH }}/lib/js/bootstrap.min.js"></script>
     <script src="{{ ASSET_PATH }}/lib/js/underscore-min.js"></script>
     
-    <!--<script src="{{ ASSET_PATH }}/js/jquery.event.move.js"></script>
-    <script src="{{ ASSET_PATH }}/js/jquery.event.swipe.js"></script>-->
+    <script src="{{ ASSET_PATH }}/js/jquery.event.move.js"></script>
+    <script src="{{ ASSET_PATH }}/js/jquery.event.swipe.js"></script>
     
     <script src="{{ ASSET_PATH }}/js/main.js"></script>
   </body>
