--- a/_includes/themes/p97/default.html
+++ b/_includes/themes/p97/default.html
@@ -109,9 +109,7 @@
     <script src="{{ ASSET_PATH }}/lib/js/jquery.min.js"></script>
     <script src="{{ ASSET_PATH }}/lib/js/bootstrap.min.js"></script>
     <script src="{{ ASSET_PATH }}/lib/js/underscore-min.js"></script>
-    
-    <script src="{{ ASSET_PATH }}/js/jquery.event.move.js"></script>
-    <script src="{{ ASSET_PATH }}/js/jquery.event.swipe.js"></script>
+    <script src="{{ ASSET_PATH }}/lib/js/jquery.touchSwipe.min.js"></script>
     
     <script src="{{ ASSET_PATH }}/js/main.js"></script>
   </body>
