finalized blurbs, ecotrust

--- a/_includes/themes/p97/default.html
+++ b/_includes/themes/p97/default.html
@@ -89,6 +89,7 @@
       <div class="row">
         <div class="col-md-8">
           <h2>Technology solutions and engagement strategies for <span class="blue">marine</span> &amp; coastal planning.</h2>
+          <img src="{{ ASSET_PATH }}/images/ecotrust.png" alt="point nine seven, an ecotrust company"/>
         </div>
         <div class="col-md-4">
           <h3>Get In Touch</h3>
