better size panel on phone

--- a/assets/themes/p97/css/style.css
+++ b/assets/themes/p97/css/style.css
@@ -310,7 +310,7 @@ h1,h2,h3,h4,h5,h6 {
         height: 350px;
     }
     .carousel .lens .lens-panel {
-        width: 45%;
+        width: 48% !important;
     }
     .carousel-caption {
         left: 10px !important;
