--- a/assets/themes/p97/css/style.css
+++ b/assets/themes/p97/css/style.css
@@ -300,9 +300,13 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 @media only screen and (max-width: 529px) {
+    .navbar {
+        margin-top: 0 !important;
+    }
     .root {
         height: 450px;
     }
+
     .carousel .lens {
         height: 320px;
         top: 115px !important;
