adding more places

--- a/_includes/themes/p97/default.html
+++ b/_includes/themes/p97/default.html
@@ -153,6 +153,7 @@
     <script src="{{ ASSET_PATH }}/lib/js/bootstrap.min.js"></script>
     <script src="{{ ASSET_PATH }}/lib/js/underscore-min.js"></script>
     <script src="{{ ASSET_PATH }}/lib/js/jquery.touchSwipe.min.js"></script>
+    <script src="{{ ASSET_PATH }}/lib/js/backstretch.js"></script>
     
     <script src="{{ ASSET_PATH }}/js/main.js"></script>
   </body>
