--- a/assets/themes/p97/css/style.css
+++ b/assets/themes/p97/css/style.css
@@ -17,6 +17,16 @@ iframe {
 }
 
 
+.team {
+    margin-bottom: 20px;
+}
+
+.team .carousel-control {
+    display: none;
+}
+
+.container.container-wide { width: 100%;}
+
 
 .faded {
     opacity: 1;
@@ -150,12 +160,16 @@ h1,h2,h3,h4,h5,h6 {
     height: 100%;
     
 }
-
+.item img.stretch {
+    width: 100%;
+    margin: 0 auto;
+}
 .blue {
     color: rgb(31, 150,169);
 }
 .root {
     height: 650px;
+    background-color: white;
 }
 .root .content {
     height: 100%;
@@ -174,7 +188,7 @@ h1,h2,h3,h4,h5,h6 {
     height: 175px;
 }
 .post-full {
-    margin-top: 200px;
+    /*margin-top: 200px;*/
 }
 #carousel-wrapper .carousel, #carousel-wrapper .carousel .carousel-inner, #carousel-wrapper .carousel .item, #carousel-wrapper .carousel .container {
     height: 100%;
@@ -238,6 +252,19 @@ h1,h2,h3,h4,h5,h6 {
         position: absolute;
         bottom: 10px;
         right: 25px;
+    }
+    .lens.lens-wide {
+        background-color: white;
+        height: 175px;
+        padding: 20px;
+        top: 17%;
+    }
+    .lens.lens-left {
+        background-color: white;
+        min-height: fit-content;
+        padding: 20px;
+        top: 20%;
+        width: 30%;
     }
 /* posts index */
  .post > h3.title {
