--- a/_includes/themes/p97/default.html
+++ b/_includes/themes/p97/default.html
@@ -51,7 +51,7 @@
             </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
-            {% if page.url == '/index.html' %}
+            {% if page.url == '/!!index.html' %}
             <li class="dropdown active">
               <a class="dropdown-toggle" data-toggle="dropdown">
                 Experience
@@ -74,7 +74,7 @@
             {% else %}
             <li><a href="{{ BASE_PATH }}/index.html">Experience</a></li>
             {% endif %}
-            {% if page.url == '/team/index.html' %}
+            {% if page.url == '!!/team/index.html' %}
               <li class="dropdown active">
                 <a class="dropdown-toggle" data-toggle="dropdown">
                   Team
