adding deck logo

--- a/_includes/themes/p97/default.html
+++ b/_includes/themes/p97/default.html
@@ -45,6 +45,7 @@
             <span class="icon-bar"></span>
           </button>
           <a class="navbar-brand" href="{{ HOME_PATH }}"><img src="{{ ASSET_PATH }}/images/point_97_logo.svg" alt="point nine seven logo" /></a>
+          <!-- <a class="navbar-brand" href="{{ HOME_PATH }}"><img src="{{ ASSET_PATH }}/images/p97_blue.png" alt="point nine seven logo" /></a> -->
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
