--- a/_includes/themes/p97/default.html
+++ b/_includes/themes/p97/default.html
@@ -132,11 +132,10 @@
       <div class="row">
         <div class="col-md-8">
           <h2>Technology solutions and engagement strategies for <span class="blue">marine</span> &amp; coastal planning.</h2>
-          <img src="{{ ASSET_PATH }}/images/ecotrust.png" alt="point nine seven, an ecotrust company"/>
+          <img src="{{ ASSET_PATH }}/images/ecotrust.png" alt="point 97, an ecotrust company"/>
         </div>
         <div class="col-md-4">
           <h3>Get In Touch</h3>
-          <p>Et ego vobis dicam in qua nolite a me, non est quaestio.</p>
           <p><strong>Call</strong> {{ site.author.phone }}</p>
           <p><strong>Email</strong> <a href="mailto:{{site.author.email}}">{{ site.author.email }}</a></p>
        </div>
