--- a/_includes/themes/p97/default.html
+++ b/_includes/themes/p97/default.html
@@ -19,11 +19,12 @@
     <link href="{{ ASSET_PATH }}/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
     <link href="{{ ASSET_PATH }}/font/climacons-font.css" rel="stylesheet" type="text/css" media="all">
     <link href="{{ ASSET_PATH }}/lib/css/bootstrap.min.css" rel="stylesheet">
+    <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet" type="text/css" media="all">
+    <!-- <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" type="text/css" media="all">-->
     <link href='{{ ASSET_PATH }}/lib/css/mapbox.css' rel='stylesheet' />
-
+    <link rel="shortcut icon" href="{{ ASSET_PATH }}/images/point_97_logo_dark_mini.png">
     <!-- Le fav and touch icons -->
   <!-- Update these with your own images
-    <link rel="shortcut icon" href="images/favicon.ico">
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png">
     <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png">
     <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png">
@@ -99,25 +100,13 @@
               <li><a href="{{ BASE_PATH }}/team/index.html">Team</a></li>
               {% endif %}
             <li class="widget faded fade-out hidden-phone">
-              <a class="dropdown-toggle" data-toggle="dropdown"><table>
+              <a class="dropdown-toggle"><table>
                 <tr>
                   <td><span id="climate-icon" class="climacon" aria-hidden="true"></span></td>
                   <td><span class="number"></span></td>
                 </tr>
               </table></a> 
-              <ul class="dropdown-menu pull-right">
-                <li class="dropdown">
-                  <div class="row-fluid">
-                    <div class="col-xs-8 image-box">
-                        <img src="http://lorempixel.com/g/250/200/nature/">
-                      <div class="caption">Stuff</div>
-                    </div>
-                    <div class="col-xs-4">
-                      Weather!
-                    </div>
-                  </div>
-                </li>
-              </ul>
+              
               <!-- <div class="weather-window">stuff</div> -->
             </li>
         </ul>
@@ -141,10 +130,10 @@
        </div>
       </div>
     <div class="row">
-      <!-- <footer>
-        <p>&copy; {{ site.time | date: '%Y' }} {{ site.author.name }}
+      <footer>
+        <p class="pull-right">&copy; {{ site.time | date: '%Y' }} all rights reserved.
         </p>
-      </footer> -->
+      </footer>
     </div>
     </div>
     {% include JB/analytics %}
