--- a/assets/themes/p97/css/style.css
+++ b/assets/themes/p97/css/style.css
@@ -59,11 +59,11 @@ h1,h2,h3,h4,h5,h6 {
 p {
     font-family:Georgia, serif !important;
     -ms-word-break: break-all;
-         word-break: break-all;
+         
          word-break: break-word;
 
     -webkit-hyphens: auto;
-       -moz-hyphens: auto;
+       /*-moz-hyphens: auto;*/
             hyphens: auto;
 }
 
