--- a/assets/themes/p97/css/style.css
+++ b/assets/themes/p97/css/style.css
@@ -87,11 +87,11 @@ p {
     background-color: white !important;
 }
 
-.brand-container {
+/*.brand-container {
     margin-left: -15px!important;
     margin-right: -15px !important;
 }
-
+*/
 .transparent .navbar-default {
     background-color: rgba(0,0,0,0) !important;
     -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
