pushing logo out

--- a/assets/themes/p97/css/style.css
+++ b/assets/themes/p97/css/style.css
@@ -88,6 +88,10 @@ p {
     background-color: white !important;
 }
 
+.navbar-brand img {
+    margin-left: -25px;
+}
+
 .main-container {
     padding-top: 40px;
 }
