--- a/assets/themes/p97/css/style.css
+++ b/assets/themes/p97/css/style.css
@@ -244,7 +244,7 @@ top: 50%;
 left: 15px;
 z-index: 5;
 display: inline-block;
-font-size: 72px;
+font-size: 60px;
 font-weight: normal;
 }
 .carousel-control.right i{ 
@@ -302,6 +302,11 @@ img.stretch {
 }
 #map.short-map {
     height: 175px;
+}
+
+#map.header {
+    height: 130px;
+    width: 100%;
 }
 
 .simplestyle-marker {
