--- a/assets/themes/p97/css/style.css
+++ b/assets/themes/p97/css/style.css
@@ -82,6 +82,7 @@ p {
     
     border: 0px !important;
     position: absolute !important;
+    background-color: inherit !important;
 }
 
 .container.brand-container, .navbar .container {
