--- a/assets/themes/p97/css/style.css
+++ b/assets/themes/p97/css/style.css
@@ -52,10 +52,10 @@ html, body {
     height: 100%;
 }
 */
-h1,h2,h3,h4,h5,h6 {
+/*h1,h2,h3,h4,h5,h6 {
     font-family: 'museo_sans_500regular' !important;
 }
-
+*/
 p {
     /*font-family:Georgia, serif !important;*/
     font-size: 16px;
