--- a/assets/themes/p97/css/style.css
+++ b/assets/themes/p97/css/style.css
@@ -144,11 +144,15 @@ p {
 	font-weight: bold;
 	
 }
-.light .navbar-default .navbar-nav>li>a {
+/*.light .navbar-default .navbar-nav>li>a {
     color: white !important;
     text-shadow: 0 1px 2px rgba(0,0,0,0.6);
 }
-
+*/
+.light .nav>li>a {
+ color: white !important;
+ text-shadow: 0 1px 2px rgba(0,0,0,0.6);   
+}
 .nav>li>a:hover, .nav>li>a:focus, .navbar .navbar-nav>.active>a, .navbar .navbar-nav>.active>a:hover, .navbar .navbar-nav>.active>a:focus {
     color: rgb(31, 150,169) !important;
     background-color: inherit !important;
