adding news page

--- a/_includes/themes/p97/default.html
+++ b/_includes/themes/p97/default.html
@@ -56,11 +56,11 @@
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav">
-            </li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <!-- <li {% if page.url == '/about/index.html' %}class="active"{% endif %}><a href="{{ BASE_PATH }}/about/index.html">About</a></li> -->
             <!-- <li {% if page.url == '/index.html' %}class="active"{% endif %}><a href="{{ BASE_PATH }}/index.html">Experience</a></li> -->
+            <li {% if page.url == '/news/index.html' %}class="active"{% endif %}><a href="{{ BASE_PATH }}/news/index.html">News</a></li>
             <li {% if page.url == '/services/index.html' %}class="active"{% endif %}><a href="{{ BASE_PATH }}/services/index.html">Services</a></li>
               <li {% if page.url == '/case-studies/index.html' %}class="active"{% endif %}><a href="{{ BASE_PATH }}/case-studies/index.html">Case Studies</a></li>
               <li {% if page.url == '/team/index.html' %}class="active"{% endif %}><a href="{{ BASE_PATH }}/team/index.html">Team</a></li>
